src/styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
	--background-color: #121317;
	--glow-color: transparent;
	--window-opacity: 1;
	--window-color: #1e212b;
	--window-blur: 0px;
	
	--text-color: #e2e2e2;
	--white: #e2e2e2;
	--gray: #97989d;
	--black: #16161e;
	--red: #ec6183;
	--green: #2ed8a2;
	--yellow: #e8b195;
	--blue: #2bc3de;
	--cyan: #62e0e2;
	--magenta: #e069aa;

	--url-default: var(--text-color);
	--url-hover: var(--magenta);

	--selection-fg: var(--black);
	--selection-bg: var(--yellow);
	--placeholder-color: var(--gray);

	--text-glow: false;
}

* {
	box-sizing: border-box;
	padding: 0;
	margin: 0;
}

html,
body {
	background-color: var(--background-color);
	max-width: 100vw;
	overflow-x: hidden;
}

body {
	font-family: "Fira Code", monospace;
}

a,
a:active,
a:visited {
	color: var(--url-default);
	text-decoration: none;
	transition: color 0.2s !important;
}

a:hover {
	color: var(--url-hover) !important;
	transition: color 0.2s !important;
}

::selection {
	color: var(--selection-fg);
	background: var(--selection-bg);
}

::placeholder {
	color: var(--placeholder-color) !important;
}

.window-glow {
	box-shadow: 0 0 5px var(--glow-color), 
				0 0 25px var(--glow-color), 
				0 0 50px var(--glow-color),
				0 0 200px var(--glow-color);

	transition: box-shadow 0.2s;
}

.text-glow {
	text-shadow: 0px 0px 10px;
}

.bg-window-color {
	
}

.selected {
	background-color: var(--selection-bg);
	color: var(--selection-fg) !important;
}

.align-left { text-align: left; }
.align-center { text-align: center; }
.align-right { text-align: right; }

.ace_editor,
.ace_gutter {
	background-color: var(--window-color) !important;
}

img {
	pointer-events: none !important;
	user-select: none !important;
  }

  .terminal {
	border-bottom-right-radius: 1.85em;
	border-bottom-left-radius: 1.85em;
	margin: 0;
	border: 0;
	outline: 0;
  }

  .profile-logo {
	border-radius: 50%;
  }

.window {
    min-width: fit-content;
    min-height: fit-content;
    width: 40em;
    height: fit-content;
    border-radius: 1.85rem;
    position: relative;
    color: #fff;
    display:block;
    resize: both;
}
.popup.AboutSys {
    width: 350px;
}
.window.pressed  {
    transition: none;
}
.window-topbar {
    top: 0;
    left: 0;
    width: 100%;
    position: absolute;
    border-top-left-radius: 0.75rem;
    border-top-right-radius: 0.75rem;
    z-index: 1 !important;
	display: flex;
	justify-content: center;
}
.window-topbar-pill {
	height: 0.3em;
	width: 4em;
	background-color: #3b3b3b;
	border-radius: 1em;
	margin: 0.75em 0;
	opacity: 0;
	transition: 0.25s;
}


.window-topbar:hover .window-topbar-pill, #window.pressed .window-topbar-pill {
	opacity: 1;
}

.window-topbar:active .window-topbar-pill {
    transform: scale(0.9);
}

.window-topbar-buttons {
    position: relative;
    display: flex;
    padding: 0.4rem;
    margin: 0.75rem !important;
	opacity: 0;
    border-radius: 1.8rem;
    transition: 0.2s cubic-bezier(0.39, 0.575, 0.565, 1);
}
.window-topbar-buttons:hover {
    padding: 0.5rem;
    margin: 0.65rem !important;
}

.window-topbar-buttons .window-btn:hover {
    transform: scale(1.1);
}

.window-content {
    margin-top: 0.5rem;
    height: 100%;
    width: 100%;
    overflow: visible;
    display: block;
    position: relative;
}

.window-btn {
    width: 15.5px;
    height: 15.5px;
    border-radius: 50%;
    margin: 0 0.3rem;
    transition: 0.1s cubic-bezier(0.165, 0.84, 0.44, 1);
    display: flex;
    justify-content: center;
    align-items: center;
}
.window-btn * {
    opacity: 0;
    transition: 0.2s all;
}

.window-topbar-buttons:hover .window-btn * {
    opacity: 1;
}

.window-btn.close {
    background-color: #FF605C;
}

.window-btn.minimise {
    background-color: yellow;
}

.window-btn.maximise {
    background-color: #00CA4E;
}

.focused {
    z-index: 1000;
}

.hidden {
    display: none;
}

.window-btn-maximise {
    width: 70%;
    height: 70%;
}

.window {
    top: 0;
    
}

.app-maximized {
    width: calc(100% - 5px) !important; 
    height: calc(100% - 5px) !important;
    top: 0 !important;
    left: 0 !important;
    resize: none;
}
.app-maximized .liquidGlass-effect .app-maximized .liquidGlass-tint .app-maximized .liquidGlass-shine {
    display: none !important;
}

.app-minimising {
        transition: 0.3s;
}

.app-hidden {
    transition: 0.3s;
    top: 100% !important;
    transform: scale(0.2);
}

